syntax = "proto3";
package api;

message Request {
  string resource = 1;
  string serviceID = 2;
}

message Response {
  bool success = 1;
  string error = 2;
}

service Api {
  rpc RequestLock(Request) returns (Response) {}
  rpc ReleaseLock(Request) returns (Response) {}
}